--- a/G.html
+++ b/G.html
@@ -4,6 +4,6 @@
    <title> Try It Yourself </title>
 </head>
 <body>
-   <a href=" https://www.google.com/ "> Wikipedia </a>
+   <a href=" https://www.google.com/ "> google </a>
 </body>
 </html>
