--- a/G.html
+++ b/G.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-   <title> Try It Yourself </title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>HTML</title>
+  
 </head>
+
 <body>
-   <a href=" https://www.google.com/ "> google </a>
+  <h1> ordered list </h1>
+  <h1>Fruit</h1>
+  <ol>
+    <li>Apple</li>
+    <li>Banana</li>
+  </ol>
+<p>click here <a href="https://www.google.com/">Google</a></p>
+<input type="text" placeholder="write your feedback">
+<button>submit</button>
 </body>
 </html>
